welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not found: type yellow
def faireV(c: yellow) {
              ^MethodsPicture:24: error: not found: value c
faireV(c)
       ^